testsuite/poke.pkl/fun-types-diag-2.pk
/* { dg-do compile } */

type Callback = (...,)int; /* { dg-error "" } */
